fixed alignment and margins mainly to get rid of white wpace and get it looking right on mob and desk

--- a/src/components/10secondintro/10sec.css
+++ b/src/components/10secondintro/10sec.css
@@ -12,11 +12,11 @@
 }   
 
 .intro-paragraph{
-    width: 25vmax;
-    font-size: 1.5vmax;
+    width: 34vmax;
+    font-size: 2vmax;
     color: white;
     transition-duration: 0.3s;
-    margin: 5vmax;
+    margin: 2vmax;
 }
 
 .intro-icon{
@@ -36,7 +36,7 @@
         font-size: 1.3vmax;
         color: white;
         transition-duration: 0.3s;
-        margin: 2vmax;
+        margin: 1vmax;
     }
     
     .intro-icon{
